tests/ui/snapshots/ui__test_tag__tag_view_empty_filtered_out.snap
---
source: tests/ui/test_tag.rs
expression: out
---
"┌─────────────────────────── Tags (0/2, conflicted) ───────────────────────────┐"
"│No tags match the current filter (F to change)                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [?] Help   [j/k] Navigate   [Enter] Jump   [n] Create Tag                      "
"                                                                                "
" [F] Filter: Conflicted   [u] Undo   [^R] Redo   [^L] Refresh   [q] Back        "
