tests/ui/snapshots/ui__test_tag__tag_view_empty_no_tags.snap
---
source: tests/ui/test_tag.rs
expression: out
---
"┌────────────────────────────────── Tags (0) ──────────────────────────────────┐"
"│No tags found                                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [?] Help   [j/k] Navigate   [Enter] Jump   [n] Create Tag   [F] Filter: All    "
"                                                                                "
" [u] Undo   [^R] Redo   [^L] Refresh   [q] Back                                 "
