tests/ui/snapshots/ui__test_tag__tag_view_three_groups_styles.snap
---
source: tests/ui/test_tag.rs
expression: render_with_styles(&mut app)
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 16 },
    content: [
        "┌────────────────────────────────── Tags (6) ──────────────────────────────────┐",
        "│  ── Local ──                                                                 │",
        "│  v0.11.0                         mzslzzzz  release: v0.11.0                  │",
        "│  v0.12.0 !                       qpvuntsm  release: v0.12.0                  │",
        "│  v0.9.0                                    (no description)                  │",
        "│  ── Remote (tracked) ──                                                      │",
        "│  v0.11.0@origin                                                              │",
        "│  ── Remote (untracked) ──                                                    │",
        "│  v0.10.1@upstream                                                            │",
        "│  v0.12.0@origin                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        " [?] Help   [j/k] Navigate   [Enter] Jump   [n] Create Tag   [d] Delete         ",
        "                                                                                ",
        " [P] Push   [F] Filter: All   [u] Undo   [^R] Redo   [^L] Refresh   [q] Back    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 45, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: White, bg: Indexed(24), underline: Reset, modifier: BOLD,
        x: 3, y: 2, fg: Green, bg: Indexed(24), underline: Reset, modifier: BOLD,
        x: 33, y: 2, fg: Yellow, bg: Indexed(24), underline: Reset, modifier: BOLD,
        x: 45, y: 2, fg: White, bg: Indexed(24), underline: Reset, modifier: BOLD,
        x: 61, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 27, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Black, bg: Cyan, underline: Reset, modifier: NONE,
        x: 10, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 13, fg: Black, bg: Blue, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 42, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 13, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 13, fg: Black, bg: Red, underline: Reset, modifier: NONE,
        x: 72, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Black, bg: Blue, underline: Reset, modifier: NONE,
        x: 10, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 15, fg: Black, bg: Cyan, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 15, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 39, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 15, fg: Black, bg: Green, underline: Reset, modifier: NONE,
        x: 51, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 15, fg: Black, bg: Blue, underline: Reset, modifier: NONE,
        x: 66, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 15, fg: Black, bg: Red, underline: Reset, modifier: NONE,
        x: 77, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 0 }
}, cursor: false, pos: (0, 0) }
